Menu Lateral para testes

--- a/src/app/components/menu-item/menu_item.component.scss
+++ b/src/app/components/menu-item/menu_item.component.scss
@@ -7,7 +7,6 @@
 }
 
 .menu a:link {
-    background: #F5F5F5;
     color: #666;
     font-weight: bold;
     text-decoration: none;
@@ -18,4 +17,9 @@
 ul {
     padding: 0px;
     align-items: center;
+}
+
+a {
+    background: rgb(99, 97, 97);
+
 }
