update small fixes

--- a/src/app/components/menu-item/menu_item.component.html
+++ b/src/app/components/menu-item/menu_item.component.html
@@ -1,9 +1,5 @@
 <div class="menu">
     <ul>
-        <li><a href="#">#</a></li>
-        <li><a href="#">#</a></li>
-        <li><a href="#">#</a></li>
-        <li><a href="#">#</a></li>
-        <li><a href="#">#</a></li>
+        <li *ngFor="let item of menuItems" (click)="abrirPagina(item)"><a href="#">#{{item}}</a></li>
     </ul>
 </div>
