--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,5 +1,5 @@
 .menu-conteudo {
-    width: 3%;
+    width: 42px;
     text-align: center;
     background-image: linear-gradient(to bottom, rgb(151, 151, 151), rgb(255, 255, 255), rgb(151, 151, 151));
     margin: 0px;
