--- a/src/app/components/menu-item/menu_item.component.scss
+++ b/src/app/components/menu-item/menu_item.component.scss
@@ -7,7 +7,7 @@
 }
 
 .menu a:link {
-    color: #666;
+    color: rgb(21, 21, 21);
     font-weight: bold;
     text-decoration: none;
     display: block;
