--- a/src/app/components/menu-item/menu_item.component.html
+++ b/src/app/components/menu-item/menu_item.component.html
@@ -1,5 +1,7 @@
 <div class="menu">
     <ul>
-        <li *ngFor="let item of menuItems" (click)="abrirPagina(item)"><a href="#">#{{item}}</a></li>
+        <li *ngFor="let item of menuItems" (click)="abrirPagina(item)">
+            <a href="#">#{{item}}</a>
+        </li>
     </ul>
 </div>
