Update changes for lists

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <menu *ngIf="isLogged()"></menu>
 <toolbar *ngIf="isLogged()"></toolbar>
-<router-outlet></router-outlet>
+<div class="main-container">
+    <router-outlet></router-outlet>
+</div>
