--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <div class="toolbar-container">
     <div class="flex">
-        <h5>usuario</h5>
+        <h5>{{usuario}}</h5>
         <button (click)="showmenu=!showmenu">menu</button>
     </div>
     <div class="toolbar-menu" [hidden]="showmenu">
