--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -1,4 +1,4 @@
-<div class="login-container">
+<div class="cadastro-container">
     <my-textinput [ngClass]="usernameError ? 'error':''" (valueChanged)="setUsername($event)" [placeholder]="'Usuario'" >
     </my-textinput>
 
