--- a/src/app/components/aulas/aulas.component.html
+++ b/src/app/components/aulas/aulas.component.html
@@ -1,4 +1,4 @@
 <div class="aulas">
-
+    <video-player></video-player>
     <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg">
 </div>
