--- a/src/app/components/aula/aula.component.html
+++ b/src/app/components/aula/aula.component.html
@@ -1,14 +1,19 @@
 <div class="aula">
-    <div class="video-container">
-        <div class="header">
-            {{aula?.nome}}
-        </div>
-        <iframe class="frameAula" width="280" height="120" [src]="safeSrc(aula)" title="YouTube video player"
+  <div class="video-container">
+    <div class="header">
+      {{aula?.snippet.title}}
+    </div>
+    <iframe class="frameAula"
+            *ngIf="video"
+            width="280"
+            height="120"
+            [src]="safeSrc()"
+            title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
-        <div class="footer">
-            {{aula?.descricao}}
-        </div>
+    <div class="footer">
+      {{aula?.snippet.description}}
     </div>
+  </div>
 </div>
