--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,34 @@
 body {
-    margin: 0px;
+  padding: 0;
+  margin: 0;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+:host {
+  &:ng-deep {
+    iframe {
+      .ytp-playlist-menu {
+        display: block !important;
+        width: 50px;
+      }
+    }
+  }
+}
+
+.ytp-playlist-menu {
+  display: block !important;
+  width: 55px;
+}
+iframe {
+  .ytp-playlist-menu {
+    display: block !important;
+    width: 58px;
+  }
 }
