--- a/src/app/components/aula/aula.component.html
+++ b/src/app/components/aula/aula.component.html
@@ -1,19 +1,18 @@
 <div class="aula">
   <div class="video-container">
     <div class="header">
-      {{aula?.snippet.title}}
+      {{aula?.title}}
     </div>
     <iframe class="frameAula"
-            *ngIf="video"
+            *ngIf="aula"
             width="280"
             height="120"
             [src]="safeSrc()"
             title="YouTube video player"
             frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
     <div class="footer">
-      {{aula?.snippet.description}}
+      {{aula?.description}}
     </div>
   </div>
 </div>
