--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,12 +18,7 @@
     <!-- <mat-hint>Errors appear instantly!</mat-hint> -->
   </mat-form-field>
   <div class="buttons">
-    <button (click)="doLogin()" mat-raised-button>Login</button>
+    <button (click)="doLogin()"
+            mat-raised-button>Login</button>
   </div>
 </div>
-
-<div id="g_id_onload"
-data-client_id="111424209185-6ainmp7ek7l7o1bgk1394cpk9uqcceb2.apps.googleusercontent.com"
-data-callback="handleCredentialResponse">
-</div>
-<div class="g_id_signin" data-type="standard"></div>
