--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,6 +18,7 @@
     <!-- <mat-hint>Errors appear instantly!</mat-hint> -->
   </mat-form-field>
   <div class="buttons">
-    <button (click)="doLogin()" mat-raised-button>Login</button>
+    <button (click)="doLogin()"
+            mat-raised-button>Login</button>
   </div>
 </div>
